--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,6 +25,7 @@
   },
   "plugins": ["react", "@typescript-eslint", "react-hooks", "prettier"],
   "rules": {
+    "react/jsx-one-expression-per-line": "off",
     "import/no-extraneous-dependencies": ["error", { "devDependencies": true }],
     "react/jsx-props-no-spreading": "off",
     "prettier/prettier": "error",
