--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@ant-design/icons": "^4.1.0",
     "antd": "^4.2.2",
     "axios": "^0.19.2",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
@@ -47,6 +48,7 @@
     "@types/axios": "^0.14.0",
     "@types/jest": "^25.2.1",
     "@types/node": "^13.13.5",
+    "@types/prop-types": "^15.7.3",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.1.5",
