--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "@ant-design/icons": "^4.1.0",
     "antd": "^4.2.2",
     "axios": "^0.19.2",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
+    "enzyme-to-json": "^3.4.4",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
