--- a/package.json
+++ b/package.json
@@ -26,6 +26,11 @@
     "storybook": "start-storybook -p 9009 -s public",
     "build-storybook": "build-storybook -s public"
   },
+  "jest": {
+    "snapshotSerializers": [
+      "enzyme-to-json/serializer"
+    ]
+  },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -51,6 +56,8 @@
     "@testing-library/user-event": "^7.1.2",
     "@types/antd": "^1.0.0",
     "@types/axios": "^0.14.0",
+    "@types/enzyme": "^3.10.5",
+    "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/jest": "^25.2.1",
     "@types/node": "^13.13.5",
     "@types/prop-types": "^15.7.3",
@@ -60,6 +67,7 @@
     "@types/styled-components": "^5.1.0",
     "@typescript-eslint/eslint-plugin": "^2.31.0",
     "@typescript-eslint/parser": "2.31.0",
+    "babel-jest": "24.9.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-config-prettier": "^6.11.0",
